<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/nav_photos" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_active_black_24dp"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_about_us" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_security_black_24dp"
            android:title="@string/privacy_policy" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_black_24dp"
            android:title="@string/action_logout" />
    </group>
</menu>