<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="5dp"
    app:cardCornerRadius="15dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/forgot_bg"
        android:padding="10dp" >

        <TextView
            android:id="@+id/otp_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:fontFamily="sans-serif-medium"
            android:text="OTP sent to given Mobile Number"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/timer_linlay"
            android:layout_centerInParent="true"
            android:layout_below="@id/otp_status_text"
            android:orientation="horizontal"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/otp_timer"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center"
            android:visibility="gone"
            android:fontFamily="sans-serif-medium"
            />

        <TextView
            android:id="@+id/otp_resend_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:fontFamily="sans-serif-medium"
            android:text="Resend"
            android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ph_linlay"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/country_code"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@drawable/registerbtn_bg"
                android:drawableLeft="@drawable/ind_flag"
                android:drawableStart="@drawable/ind_flag"
                android:gravity="center"
                android:padding="5dp"
                android:visibility="gone"
                android:text="+91" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/reg_edittxt_bg"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:maxLength="10"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:visibility="gone" />

        </LinearLayout>

        <EditText
            android:id="@+id/forgot_OTP"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/reg_edittxt_bg"
            android:gravity="center"
            android:hint="@string/hint_OTP"
            android:inputType="phone"
            android:maxLength="6"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:visibility="gone" />
        </LinearLayout>

        <EditText
            android:id="@+id/confirm_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/reg_edittxt_bg"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:visibility="gone" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>